--- a/ementa.html
+++ b/ementa.html
@@ -66,7 +66,6 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#semana-13" id="toc-semana-13" class="nav-link" data-scroll-target="#semana-13">Semana 13</a></li>
   <li><a href="#semana-14" id="toc-semana-14" class="nav-link" data-scroll-target="#semana-14">Semana 14</a></li>
   <li><a href="#semana-15" id="toc-semana-15" class="nav-link" data-scroll-target="#semana-15">Semana 15</a></li>
-  <li><a href="#semana-16" id="toc-semana-16" class="nav-link" data-scroll-target="#semana-16">Semana 16</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -105,7 +104,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Data de Publicação</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">segunda-feira, 25 de agosto de 2025</p>
+      <p class="date">segunda-feira, 29 de setembro de 2025</p>
     </div>
   </div>
   
@@ -447,7 +446,7 @@ ul.task-list li input[type="checkbox"] {
 <tbody>
 <tr class="odd">
 <td style="text-align: center;">7</td>
-<td style="text-align: center;">24/09/2025</td>
+<td style="text-align: center;">01/10/2025</td>
 <td style="text-align: left;">Codificação na geração, classificação e análise de informação histórica</td>
 </tr>
 </tbody>
@@ -455,16 +454,12 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
 <li>BLOCH, Marc. <strong>Apologia da história ou o ofício do historiador</strong>. Rio de Janeiro: Jorge Zahar, 2001. Pp. 51-87</li>
-<li>FORTES, Alexandre; ALVIM, Leandro Guimarães Marques. Evidências, códigos e classificações: o ofício do historiador e o mundo digital. <em>Esboços: histórias em contextos globais</em>, v. 27, n.&nbsp;45, p.&nbsp;207–227, 19 jun. 2020.</li>
+<li>FORTES, Alexandre; ALVIM, Leandro Guimarães Marques. Evidências, códigos e classificações: o ofício do historiador e o mundo digital. <em>Esboços: histórias em contextos globais</em>, v. 27, n.&nbsp;45, p.&nbsp;207–227, 19 jun. 2020. <a href="https://periodicos.ufsc.br/index.php/esbocos/article/view/2175-7976.2020.e68270">LINK</a>.</li>
 </ul>
 <p><strong>Bibliografia Complementar</strong></p>
 <ul>
-<li>ZILIO, Leonardo; FINATTO, Maria; VIEIRA, Renata. Named Entity Recognition Applied to Portuguese Texts from the XVIII Century. abr. 2022.</li>
-<li>BŁOCH, Agata; VASQUES FILHO, Demival; BOJANOWSKI, Michał. Networks from archives: Reconstructing networks of official correspondence in the early modern Portuguese empire. <em>Social Networks</em>, 24 set. 2020.</li>
-</ul>
-<p><strong>Material de apoio</strong></p>
-<ul>
-<li>EM BREVE</li>
+<li>ZILIO, Leonardo; FINATTO, Maria; VIEIRA, Renata. Named Entity Recognition Applied to Portuguese Texts from the XVIII Century. abr. 2022. <a href="https://dspace.uevora.pt/rdpc/bitstream/10174/32165/1/paper10-NER.pdf">LINK</a>.</li>
+<li>BŁOCH, Agata; VASQUES FILHO, Demival; BOJANOWSKI, Michał. Networks from archives: Reconstructing networks of official correspondence in the early modern Portuguese empire. <em>Social Networks</em>, 24 set. 2020. <a href="https://www.sciencedirect.com/science/article/abs/pii/S0378873320300769">LINK</a>.</li>
 </ul>
 </section>
 <section id="semana-8" class="level3">
@@ -485,7 +480,7 @@ ul.task-list li input[type="checkbox"] {
 <tbody>
 <tr class="odd">
 <td style="text-align: center;">8</td>
-<td style="text-align: center;">01/10/2025</td>
+<td style="text-align: center;">08/10/2025</td>
 <td style="text-align: left;">Oficina III: OCR e leitura distante com NLP para a História</td>
 </tr>
 </tbody>
@@ -521,19 +516,11 @@ ul.task-list li input[type="checkbox"] {
 <tbody>
 <tr class="odd">
 <td style="text-align: center;">9</td>
-<td style="text-align: center;">08/10/2025</td>
-<td style="text-align: left;">Repensando a pesquisa histórica na virada das IAs Generativas</td>
+<td style="text-align: center;">15/10/2025</td>
+<td style="text-align: left;">Exercícios práticos [Atividades assíncronas]</td>
 </tr>
 </tbody>
 </table>
-<p><strong>Bibliografia Básica</strong></p>
-<ul>
-<li>EM BREVE</li>
-</ul>
-<p><strong>Bibliografia Complementar</strong></p>
-<ul>
-<li>EM BREVE</li>
-</ul>
 <p><strong>Material de apoio</strong></p>
 <ul>
 <li>EM BREVE</li>
@@ -556,12 +543,24 @@ ul.task-list li input[type="checkbox"] {
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">15/10/2025</td>
-<td style="text-align: left;"><strong>Sem aula</strong> – Feriado</td>
+<td style="text-align: center;">10</td>
+<td style="text-align: center;">22/10/2025</td>
+<td style="text-align: left;">Repensando a pesquisa histórica na virada das IAs Generativas</td>
 </tr>
 </tbody>
 </table>
+<p><strong>Bibliografia Básica</strong></p>
+<ul>
+<li>EM BREVE</li>
+</ul>
+<p><strong>Bibliografia Complementar</strong></p>
+<ul>
+<li>EM BREVE</li>
+</ul>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li>EM BREVE</li>
+</ul>
 <hr>
 </section>
 <section id="semana-11" class="level3">
@@ -581,8 +580,8 @@ ul.task-list li input[type="checkbox"] {
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: center;">10</td>
-<td style="text-align: center;">22/10/2025</td>
+<td style="text-align: center;">11</td>
+<td style="text-align: center;">29/10/2025</td>
 <td style="text-align: left;">Oficina IV: Inteligência Artificial - conceitos e usos</td>
 </tr>
 </tbody>
@@ -611,8 +610,8 @@ ul.task-list li input[type="checkbox"] {
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: center;">11</td>
-<td style="text-align: center;">29/10/2025</td>
+<td style="text-align: center;">12</td>
+<td style="text-align: center;">05/11/2025</td>
 <td style="text-align: left;">Por uma hermenêutica digital aumentada: RAG na pesquisa</td>
 </tr>
 </tbody>
@@ -638,8 +637,8 @@ ul.task-list li input[type="checkbox"] {
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: center;">12</td>
-<td style="text-align: center;">05/11/2025</td>
+<td style="text-align: center;">13</td>
+<td style="text-align: center;">12/11/2025</td>
 <td style="text-align: left;">Oficina V: Rodando LLMs localmente</td>
 </tr>
 </tbody>
@@ -674,8 +673,8 @@ ul.task-list li input[type="checkbox"] {
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: center;">13</td>
-<td style="text-align: center;">12/11/2025</td>
+<td style="text-align: center;">14</td>
+<td style="text-align: center;">19/11/2025</td>
 <td style="text-align: left;">Ensino de história, história pública e divulgação num mundo de IAs</td>
 </tr>
 </tbody>
@@ -701,8 +700,8 @@ ul.task-list li input[type="checkbox"] {
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: center;">14</td>
-<td style="text-align: center;">19/11/2025</td>
+<td style="text-align: center;">15</td>
+<td style="text-align: center;">26/11/2025</td>
 <td style="text-align: left;">Oficina VI: a definir</td>
 </tr>
 </tbody>
@@ -710,35 +709,8 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Bibliografia Básica</strong> - EM BREVE</p>
 <p><strong>Bibliografia Complementar</strong> - EM BREVE</p>
 <p><strong>Material de apoio</strong> - EM BREVE</p>
-</section>
-<section id="semana-16" class="level3">
-<h3 class="anchored" data-anchor-id="semana-16">Semana 16</h3>
-<table class="caption-top table">
-<colgroup>
-<col style="width: 7%">
-<col style="width: 15%">
-<col style="width: 77%">
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: center;">Aula</th>
-<th style="text-align: center;">Data</th>
-<th style="text-align: left;">Tema</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: center;">15</td>
-<td style="text-align: center;">26/11/2025</td>
-<td style="text-align: left;">Novos desafios éticos e os riscos das IAs</td>
-</tr>
-</tbody>
-</table>
-<p><strong>Bibliografia Básica</strong> - EM BREVE</p>
-<p><strong>Bibliografia Complementar</strong> - EM BREVE</p>
-<p><strong>Material de apoio</strong> - EM BREVE</p>
 <hr>
-<p><img src="https://omekas.im.ufrrj.br/files/original/aa99fe174fd6f97dd42ee78a359a46428b9997be.png" class="img-fluid"></p>
+<p><img src="banner.png" class="img-fluid"></p>
 </section>
 </section>
 
