--- a/atividade.html
+++ b/atividade.html
@@ -248,6 +248,10 @@ ul.task-list li input[type="checkbox"] {
 </blockquote>
 <p>📖 <strong>Fonte:</strong> <a href="https://style.mla.org/citing-generative-ai/">MLA Style Center – Citing Generative AI</a></p>
 <hr>
+<p>📝 <strong>Nota do autor</strong></p>
+<p>Este material foi redigido com o apoio do modelo <strong>GPT-5</strong>, da empresa <strong>OpenAI</strong>, por meio da ferramenta <strong>ChatGPT</strong>, em <strong>5 de novembro de 2025</strong>.</p>
+<p>O uso da IA foi restrito à <strong>organização textual, revisão de estilo e formatação</strong>, mantendo-se a <strong>autoria intelectual e o conteúdo analítico sob responsabilidade exclusiva do professor Eric Brasil</strong>.</p>
+<hr>
 <p><a href="https://ericbrasil.com.br/hd-ufrrj/ementa">⬅️ Voltar à ementa</a></p>
 <p><img src="https://ericbrasil.com.br/hd-ufrrj/banner.png" class="img-fluid"></p>
 </section>
