atualização da ementa

--- a/ementa.html
+++ b/ementa.html
@@ -105,7 +105,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Data de Publicação</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">segunda-feira, 20 de outubro de 2025</p>
+      <p class="date">terça-feira, 18 de novembro de 2025</p>
     </div>
   </div>
   
@@ -184,7 +184,7 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <p><strong>Material de apoio</strong></p>
 <ul>
-<li><a href="ericbrasil.com.br/hd-ufrrj/aulas/1">Slides da aula 1</a></li>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/1">Slides da aula 1</a></li>
 </ul>
 </section>
 <section id="semana-2" class="level3">
@@ -221,7 +221,7 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <p><strong>Material de apoio</strong></p>
 <ul>
-<li><a href="ericbrasil.com.br/hd-ufrrj/aulas/2">Slides da aula 2</a></li>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/2">Slides da aula 2</a></li>
 <li><a href="https://youtu.be/xcjgm6ctzAw?si=KWMzasYxj4Ihz_n3">História do Código Morse</a> (YouTube)</li>
 </ul>
 </section>
@@ -250,6 +250,7 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Material de apoio</strong></p>
 <ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/3">Slides da aula 3</a></li>
 <li>Links das ferramentas apresentadas na oficina:
 <ul>
 <li><a href="https://www.gnu.org/software/bash/">Bash</a> / <a href="https://learn.microsoft.com/pt-br/powershell/">PowerShell</a></li>
@@ -304,6 +305,7 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Material de apoio</strong></p>
 <ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/4">Slides da aula 4</a></li>
 <li>Links das ferramentas apresentadas na oficina:
 <ul>
 <li><a href="https://git-scm.com/">Git</a></li>
@@ -360,6 +362,10 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/5">Slides da aula 5</a></li>
+</ul>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
 <li>BRASIL, Eric; NASCIMENTO, Leonardo F. História digital: reflexões a partir da Hemeroteca Digital Brasileira e do uso de CAQDAS na reelaboração da pesquisa histórica. <em>Revista Estudos Históricos</em>, v. 33, n.&nbsp;69, p.&nbsp;196–219, 2020. <a href="http://dx.doi.org/10.1590/S2178-14942020000100011">Link</a>.</li>
@@ -410,6 +416,7 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Material de apoio</strong></p>
 <ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/6">Slides da aula 6</a></li>
 <li>Ferramentas
 <ul>
 <li><a href="ericbrasil.com.br/pyhdb">pyHDB</a> - Biblioteca Python para coleta de dados da Hemeroteca Digital Brasileira</li>
@@ -452,6 +459,10 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/7">Slides da aula 7</a></li>
+</ul>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
 <li>BLOCH, Marc. <strong>Apologia da história ou o ofício do historiador</strong>. Rio de Janeiro: Jorge Zahar, 2001. Pp. 51-87</li>
@@ -486,6 +497,10 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/8">Slides da aula 8</a></li>
+</ul>
 <p><strong>Repositórios e Ferramentas</strong></p>
 <ul>
 <li><a href="https://github.com/manisandro/gImageReader">gImageReader</a><br>
@@ -584,13 +599,14 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/11">Slides da aula 11</a></li>
+<li>LLM: A tecnologia por trás da IA textual - <a href="https://www.youtube.com/watch?v=dqTZCknuctk">Youtube</a>.</li>
+</ul>
 <p><strong>Bibliografia Complementar</strong></p>
 <ul>
 <li>TURING, A. M. I.—COMPUTING MACHINERY AND INTELLIGENCE. Mind, v. LIX, n.&nbsp;236, p.&nbsp;433–460, 1 out. 1950. <a href="https://courses.cs.umbc.edu/471/papers/turing.pdf">Link</a></li>
-</ul>
-<p><strong>Material de apoio</strong></p>
-<ul>
-<li>LLM: A tecnologia por trás da IA textual - <a href="https://www.youtube.com/watch?v=dqTZCknuctk">Youtube</a>.</li>
 </ul>
 </section>
 <section id="semana-12" class="level3">
@@ -650,6 +666,7 @@ ul.task-list li input[type="checkbox"] {
 </table>
 <p><strong>Material de apoio</strong></p>
 <ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/13">Slides da aula 13</a></li>
 <li>Ollama: <a href="https://ollama.com/">https://ollama.com/</a></li>
 <li>O que é o Ollama? - <a href="https://www.youtube.com/watch?v=5RIOQuHOihY">Youtube</a></li>
 </ul>
@@ -677,6 +694,10 @@ ul.task-list li input[type="checkbox"] {
 </tr>
 </tbody>
 </table>
+<p><strong>Material de apoio</strong></p>
+<ul>
+<li><a href="https://ericbrasil.com.br/hd-ufrrj/aulas/14">Slides da aula 14</a></li>
+</ul>
 <p><strong>Bibliografia Básica</strong></p>
 <ul>
 <li>NOIRET, Serge. História Pública Digital. <em>Liinc em Revista</em>, v. 10, n.&nbsp;1, 28 maio 2015.</li>
@@ -705,11 +726,10 @@ ul.task-list li input[type="checkbox"] {
 <tr class="odd">
 <td style="text-align: center;">15</td>
 <td style="text-align: center;">26/11/2025</td>
-<td style="text-align: left;">Oficina VI: a definir</td>
+<td style="text-align: left;">Participação da 2ª Semana de Humanidades digitaisda UFBA</td>
 </tr>
 </tbody>
 </table>
-<p><strong>Material de apoio</strong> - EM BREVE</p>
 <hr>
 <p><img src="banner.png" class="img-fluid"></p>
 </section>
